out
test.cpp: In function ‘void solve()’:
test.cpp:261:20: error: no match for ‘operator=’ (operand types are ‘vp’ {aka ‘std::__debug::vector<std::pair<long long int, long long int> >’} and ‘vt3’ {aka ‘std::__debug::vector<std::tuple<long long int, long long int, long long int> >’})
  261 |         save = vt3();
      |                    ^
In file included from /usr/include/c++/12/vector:74,
                 from /usr/include/c++/12/functional:62,
                 from stdc++.h:71:
/usr/include/c++/12/debug/vector:239:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>& std::__debug::vector<_Tp, _Allocator>::operator=(const std::__debug::vector<_Tp, _Allocator>&) [with _Tp = std::pair<long long int, long long int>; _Allocator = std::allocator<std::pair<long long int, long long int> >]’
  239 |       operator=(const vector&) = default;
      |       ^~~~~~~~
/usr/include/c++/12/debug/vector:239:17: note:   no known conversion for argument 1 from ‘vt3’ {aka ‘std::__debug::vector<std::tuple<long long int, long long int, long long int> >’} to ‘const std::__debug::vector<std::pair<long long int, long long int> >&’
  239 |       operator=(const vector&) = default;
      |                 ^~~~~~~~~~~~~
/usr/include/c++/12/debug/vector:242:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>& std::__debug::vector<_Tp, _Allocator>::operator=(std::__debug::vector<_Tp, _Allocator>&&) [with _Tp = std::pair<long long int, long long int>; _Allocator = std::allocator<std::pair<long long int, long long int> >]’
  242 |       operator=(vector&&) = default;
      |       ^~~~~~~~
/usr/include/c++/12/debug/vector:242:17: note:   no known conversion for argument 1 from ‘vt3’ {aka ‘std::__debug::vector<std::tuple<long long int, long long int, long long int> >’} to ‘std::__debug::vector<std::pair<long long int, long long int> >&&’
  242 |       operator=(vector&&) = default;
      |                 ^~~~~~~~
/usr/include/c++/12/debug/vector:245:7: note: candidate: ‘std::__debug::vector<_Tp, _Allocator>& std::__debug::vector<_Tp, _Allocator>::operator=(std::initializer_list<_Tp>) [with _Tp = std::pair<long long int, long long int>; _Allocator = std::allocator<std::pair<long long int, long long int> >]’
  245 |       operator=(initializer_list<value_type> __l)
      |       ^~~~~~~~
/usr/include/c++/12/debug/vector:245:46: note:   no known conversion for argument 1 from ‘vt3’ {aka ‘std::__debug::vector<std::tuple<long long int, long long int, long long int> >’} to ‘std::initializer_list<std::pair<long long int, long long int> >’
  245 |       operator=(initializer_list<value_type> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
